docs: replace demo placeholder documentation